yiltc-go-backup/testsuite/negative/type_alias_invalid.yilt
// Unknown type annotation should fail
fn main()
    let x xyz = 10
